@@ -1,104 +1,90 @@
 package com.fife.article_service.dao;
 
-import com.fife.article_service.entity.ArticleEntity;
-import com.fife.article_service.model.ArticleModel;
-import com.fife.article_service.repository.ArticleRepository;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.modelmapper.ModelMapper;
-
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.is;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.*;
 
-public class JpaArticleDaoTest {
+import com.fife.article_service.entity.ArticleEntity;
+import com.fife.article_service.model.Article;
+import com.fife.article_service.repository.ArticleRepository;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.modelmapper.ModelMapper;
 
-    private ArticleRepository articleRepository;
-    private ModelMapper modelMapper;
-    private JpaArticleDao jpaArticleDao;
+@ExtendWith(MockitoExtension.class)
+class JpaArticleDaoTest {
 
-    @BeforeEach
-    void SetUp() {
-        articleRepository = mock(ArticleRepository.class);
-        modelMapper = mock(ModelMapper.class);
-        jpaArticleDao = new JpaArticleDao(articleRepository, modelMapper);
+    @InjectMocks private JpaArticleDao jpaArticleDao;
+
+    @Mock private ArticleRepository articleRepository;
+
+    @Mock private ModelMapper mapper;
+
+    @Test
+    void givenArticleWhenSaveArticleThenSaveArticle() {
+        Article article = mock(Article.class);
+        ArticleEntity articleEntity = mock(ArticleEntity.class);
+
+        when(this.mapper.map(article, ArticleEntity.class)).thenReturn(articleEntity);
+        this.jpaArticleDao.save(article);
+
+        verify(this.articleRepository, times(1)).save(articleEntity);
     }
 
     @Test
-    void save_shouldMapAndSaveArticle() {
-        ArticleModel input = new ArticleModel(1L, "Title", "Content", "Author", LocalDateTime.now());
-        ArticleEntity entity = new ArticleEntity();
-        entity.setCreatedAt(input.getCreatedAt());
-        ArticleEntity savedEntity = new ArticleEntity();
-        ArticleModel output = new ArticleModel(1L, "Title", "Content", "Author", input.getCreatedAt());
+    void givenArticlesWhenFindAllThenReturnArticles() {
+        ArticleEntity articleEntity = mock(ArticleEntity.class);
+        Article article = mock(Article.class);
 
-        when(modelMapper.map(input, ArticleEntity.class)).thenReturn(entity);
-        when(articleRepository.save(entity)).thenReturn(savedEntity);
-        when(modelMapper.map(savedEntity, ArticleModel.class)).thenReturn(output);
+        when(this.articleRepository.findAll()).thenReturn(Collections.singletonList(articleEntity));
+        when(this.mapper.map(articleEntity, Article.class)).thenReturn(article);
 
-        ArticleModel result = jpaArticleDao.save(input);
+        List<Article> result = this.jpaArticleDao.findAll();
 
-        assertEquals(output.getTitle(), result.getTitle());
-        verify(articleRepository).save(entity);
-    }
-    @Test
-    void findAll_shouldReturnMappedList() {
-        ArticleEntity entity1 = new ArticleEntity();
-        entity1.setId(1L);
-        ArticleEntity entity2 = new ArticleEntity();
-        entity2.setId(2L);
-
-        ArticleModel model1 = new ArticleModel(1L, "T1", "C1", "A1", LocalDateTime.now());
-        ArticleModel model2 = new ArticleModel(2L, "T2", "C2", "A2", LocalDateTime.now());
-
-        when(articleRepository.findAll()).thenReturn(List.of(entity1, entity2));
-        when(modelMapper.map(entity1, ArticleModel.class)).thenReturn(model1);
-        when(modelMapper.map(entity2, ArticleModel.class)).thenReturn(model2);
-
-        List<ArticleModel> result = jpaArticleDao.findAll();
-
-        assertEquals(2, result.size());
-        assertEquals("T1", result.get(0).getTitle());
-        assertEquals("T2", result.get(1).getTitle());
+        assertThat(result, is(Collections.singletonList(article)));
     }
 
     @Test
-    void findById_shouldReturnMappedModelIfFound() {
+    void givenExistentIdWhenFindByIdThenReturnArticle() {
         Long id = 1L;
-        ArticleEntity entity = new ArticleEntity();
-        ArticleModel model = new ArticleModel(id,"Title", "Content", "Author", LocalDateTime.now());
+        ArticleEntity articleEntity = mock(ArticleEntity.class);
+        Article article = mock(Article.class);
 
-        when(articleRepository.findById(id)).thenReturn(Optional.of(entity));
-        when(modelMapper.map(entity, ArticleModel.class)).thenReturn(model);
+        when(this.articleRepository.findById(id)).thenReturn(Optional.of(articleEntity));
+        when(this.mapper.map(articleEntity, Article.class)).thenReturn(article);
 
-        Optional<ArticleModel> result = jpaArticleDao.findById(id);
+        Article result = this.jpaArticleDao.findById(id).orElse(null);
 
-        assertTrue(result.isPresent());
-        assertEquals("Title", result.get().getTitle());;
+        assertThat(result, is(article));
     }
 
     @Test
-    void findById_shouldReturnEmptyIfNotFound() {
-        when(articleRepository.findById(1L)).thenReturn(Optional.empty());
+    void givenNonExistentIdWhenFindByIdThenReturnNull() {
+        Long id = 1L;
 
-        Optional<ArticleModel> result = jpaArticleDao.findById(1L);
+        when(this.articleRepository.findById(id)).thenReturn(Optional.empty());
 
-        assertTrue(result.isEmpty());
+        Article result = this.jpaArticleDao.findById(id).orElse(null);
+
+        assertNull(result);
     }
 
     @Test
-    void delete_shouldMapAndDeleteEntity() {
-        ArticleModel model = new ArticleModel(1L, "Title", "Content", "Author", LocalDateTime.now());
-        ArticleEntity entity = new ArticleEntity();
+    void givenArticleWhenDeleteArticleThenDeleteArticleEntity() {
+        Article article = mock(Article.class);
+        ArticleEntity articleEntity = mock(ArticleEntity.class);
 
-        when(modelMapper.map(model, ArticleEntity.class)).thenReturn(entity);
+        when(this.mapper.map(article, ArticleEntity.class)).thenReturn(articleEntity);
 
-        jpaArticleDao.delete(model);
+        this.jpaArticleDao.delete(article);
 
-        verify(articleRepository).delete(entity);
+        verify(this.articleRepository, times(1)).delete(articleEntity);
     }
 }
